Fixed spacing

--- a/edificios/cancha/styles.css
+++ b/edificios/cancha/styles.css
@@ -229,7 +229,7 @@ html {
 }
 
 .spacing-history {
-    margin-bottom: 2vh;
+    margin-bottom: 4vh;
 }
 
 /* Information */
